compiler/tests/ar/errors/const_index_write.salam
// لغة: العربية
// توقع: E013
دالة الرئیسیة:
    ثابت ث := [1, 2, 3] بوصفه صحیح[3]
    ث[0] = 9
نهاية
